...
                <TextView
                    android:id="@+id/textViewFirstPasswordCheckTitle"
                    style="@style/ScreenHeading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/set_up_flow_crypt" />

                <LinearLayout
                    android:id="@+id/layoutPasswordHint"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_height_sub_header"
                    android:layout_marginTop="@dimen/default_margin_content_big"
...
                android:id="@+id/layoutSecondPasswordCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textViewSecondPasswordCheckTitle"
                    style="@style/ScreenHeading"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/set_up_flow_crypt" />

...
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeftSecond"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHintSecond"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextKeyPasswordSecond"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:inputType="textPassword" />

...
                        android:gravity="center"
                        android:visibility="invisible" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonConfirmPassPhrases"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/default_margin_content_big"
                    android:text="@string/confirm_pass_phrase"
                    android:theme="@style/AppWidget.Button.Green"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRightSecond"
...
