<!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: denbond7
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>

    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
...
    <string name="set_up_flow_crypt">Set up %1$s</string>
    <plurals name="found_backup_of_your_account_key">
        <item quantity="one">We found a backup of your key</item>
        <item quantity="other">We found backups of %1$d keys</item>
    </plurals>
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
    <string name="please_wait_while_backup_will_be_saved">Making a backup, please wait</string>
    <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
...
    <string name="password_quality_great">great</string>
    <string name="password_quality_good">good</string>
    <string name="password_quality_reasonable">reasonable</string>
    <string name="password_quality_poor">poor</string>
    <string name="password_quality_weak">weak</string>
    <string name="repeat_passphrase_hint">Please repeat it one more time. Make sure to note the pass phrase down.</string>
    <string name="pass_phrases_do_not_match">The two pass phrases do not match, please try again.</string>
    <string name="you_are_all_set">You\'re all set!</string>
    <string name="you_can_send_and_receive_encrypted_emails">From now on, you can send and receive encrypted emails on
        this email account.</string>
    <string name="please_wait_while_key_will_be_created">Creating a key, please wait</string>
    <string name="not_private_key">This is not a private key</string>
    <string name="setup_app">Please set up the app before use this option</string>
...
